--- a/src/resources/develop/Entities.yaml
+++ b/src/resources/develop/Entities.yaml
@@ -9,6 +9,7 @@ values:
       label: "Individual"
       metadata:
         type: Legal
+        constitutionalDocument: null
         roles:
           owners:
             principal: null
@@ -27,6 +28,8 @@ values:
       label: "Public Company Limited by Shares"
       metadata:
         type: Legal
+        constitutionalDocument: 
+         companyConstitution: null # (eg. Memorandum of Association, Charter, sometimes Articles of Association, etc.)
         roles:
           owners:
             shareholder: []
@@ -54,6 +57,8 @@ values:
       label: "Private Company Limited by Shares"
       metadata:
         type: Legal
+        constitutionalDocument: 
+         companyConstitution: null # (eg. Memorandum of Association, Charter, sometimes Articles of Association, etc.)        
         roles:
           owners:
             shareholder: []
@@ -81,6 +86,8 @@ values:
       label: "Limited Partnership"
       metadata:
         type: Legal
+        constitutionalDocument: 
+          partnershipAgreement: null
         roles:
           owners:
             partner: []
@@ -96,9 +103,11 @@ values:
 
     - code: U
       name: UnlimitedPartnership
-      label: "Unlimited Partnership" # (General Partnership, Marriage, Civil Union, Common Law Marriage, Domestic Partnership,  )
+      label: "Unlimited Partnership" # (General Partnership, Marriage, Civil Union, Common Law Marriage, Domestic Partnership)
       metadata:
         type: Legal
+        constitutionalDocument: 
+          partnershipAgreement: null        
         roles:
           owners:
             partner: []
@@ -117,6 +126,7 @@ values:
       label: "Sole Proprietorship"
       metadata:
         type: Legal
+        constitutionalDocument: null     
         roles:
           owners:
             proprietor: null
@@ -135,6 +145,8 @@ values:
       label: "Statutory Company"
       metadata:
         type: Legal
+        constitutionalDocument: 
+         companyConstitution: null # (eg. Memorandum of Association, Charter, sometimes Articles of Association, etc.)        
         roles:
           administrators:
             chairman: null
@@ -157,9 +169,11 @@ values:
 
     - code: O
       name: NonProfitOrganization
-      label: "Non-Profit Organization"
+      label: "Non-Profit Organization"      
       metadata:
         type: Legal
+        constitutionalDocument: 
+         organizationConstitution: null # (eg. Constitution, Memorandum of Association, Charter, sometimes Articles of Association, etc.)             
         role:
           administrators:
             chairman: null
@@ -184,18 +198,24 @@ values:
       label: "Nation State" # (Sovereign State)
       metadata:
         type: Legal
+        constitutionalDocument: 
+         nationalConstitution: null # (eg. Constitution, Charter, etc.)       
 
     - code: G
       name: GovernmentAgency
       label: "Government Agency"
       metadata:
         type: Legal
-
+        constitutionalDocument: 
+         charter: null # (eg. Charter, etc.) 
+         
     - code: U
       name: UnitTrust
       label: "Unit Trust"
       metadata:
         type: Ownership
+        constitutionalDocument: 
+         trustDeed: null # (eg. Trust Deed, Trust Instrument, etc.)         
         roles:
           owners:
             unitholder: []
@@ -217,6 +237,8 @@ values:
       label: "Discretionary Trust" # (Family Trust)
       metadata:
         type: Ownership
+        constitutionalDocument: 
+         trustDeed: null # (eg. Trust Deed, Trust Instrument, etc.)               
         roles:
           owners:
             beneficiary: []
