--- a/src/protocol/develop/actions/C3 - Contract Amendment.yaml
+++ b/src/protocol/develop/actions/C3 - Contract Amendment.yaml
@@ -1,5 +1,5 @@
 #
-# Contract Amendment Action: the issuer can initiate an amendment to the contract establishment metadata. The ability to make an amendment to the contract is restricted by the Authorization Flag set on the current revision of Contract Formation action.
+# Contract Amendment Action: the administration can initiate an amendment to the contract establishment metadata. The ability to make an amendment to the contract is restricted by the Authorization Flag set on the current revision of Contract Formation action.
 #
 
 code: C3
@@ -7,20 +7,20 @@ code: C3
 metadata:
   name: ContractAmendment
   label: Contract Amendment
-  description: "The issuer can initiate an amendment to the contract establishment metadata. The ability to make an amendment to the contract is restricted by the Authorization Flag set on the current revision of Contract Formation action."
+  description: "The administration can initiate an amendment to the contract establishment metadata. The ability to make an amendment to the contract is restricted by the Authorization Flag set on the current revision of Contract Formation action."
   validation: AssetCreation
   rejection: Rejection
 
 rules:
   fee:
   inputs:
-    - name: Issuer
-      label: "Issuer's Public Address"
-      comments: "This action can only come from the issuer."
+    - name: Administration
+      label: "Administration's Public Address"
+      comments: "This action can only come from the administration."
 
-    - name: NewIssuer
-      label: New Issuer Public Address
-      comments: "Only treated as the new issuer address when the Change Issuer Address flag is set to true."
+    - name: NewAdministration
+      label: New Administration Public Address
+      comments: "Only treated as the new administration address when the Change Administration Address flag is set to true."
 
   outputs:
     - name: Contract
@@ -28,9 +28,9 @@ rules:
       comments: "The related contract address."
 
 fields:
-  - name: ChangeIssuerAddress
-    label: Change Issuer Address
-    description: "Used to change the issuer address.  The new issuer address must be in the input[1] position. A change of an issuer or operator address requires both the operator and the issuer address to be in the inputs (both signatures) of the Contract Amendment action."
+  - name: ChangeAdministrationAddress
+    label: Change Administration Address
+    description: "Used to change the administration address.  The new administration address must be in the input[1] position. A change of an administration or operator address requires both the operator and the administration address to be in the inputs (both signatures) of the Contract Amendment action."
     type: bool
     example_hex: 01
     example: 1
@@ -38,7 +38,7 @@ fields:
 
   - name: ChangeOperatorAddress
     label: Change Operator Address
-    description: "Used to change the smart contract operator address.  The new operator address must be in the input[1] position, unless issuer is being changed too, then it is in input[2]. A change of an issuer or operator address requires both the operator and the issuer address to be in the inputs (both signatures) of the Contract Amendment action."
+    description: "Used to change the smart contract operator address.  The new operator address must be in the input[1] position, unless administration is being changed too, then it is in input[2]. A change of an administration or operator address requires both the operator and the administration address to be in the inputs (both signatures) of the Contract Amendment action."
     type: bool
     example_hex: 01
     example: 1
