--- a/src/protocol/develop/actions/C2 - Contract Formation.yaml
+++ b/src/protocol/develop/actions/C2 - Contract Formation.yaml
@@ -206,10 +206,10 @@ fields:
     size: 4
     example_hex: 0000000000000000
     example: "0"
-    notes: "Can't be changed by administration or smart contract operator."
+    notes: "Can't be changed by the administration or smart contract operator."
 
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds of when the smart contract created the action."
     type: Timestamp
-    notes: "Cannot be changed by administration, operator. Smart contract controls."
+    notes: "Cannot be changed by the administration, operator. Smart contract controls."
