--- a/src/protocol/develop/actions/G2 - Vote.yaml
+++ b/src/protocol/develop/actions/G2 - Vote.yaml
@@ -28,4 +28,4 @@ fields:
     label: Timestamp
     description: "Timestamp in nanoseconds of when the smart contract created the action."
     type: Timestamp
-    notes: "Cannot be changed by administration, operator. Smart contract controls."
+    notes: "Cannot be changed by the administration, operator. Smart contract controls."
