--- a/src/resources/develop/Entities.yaml
+++ b/src/resources/develop/Entities.yaml
@@ -14,6 +14,7 @@ values:
           owners:
             principal: null
           administrators:
+            principal: null
             legalGuardian: []
             agent: [] # (granted by the principal)
           general:
