--- a/src/protocol/develop/actions/M2 - Rejection.yaml
+++ b/src/protocol/develop/actions/M2 - Rejection.yaml
@@ -59,4 +59,4 @@ fields:
     label: Timestamp
     description: "Timestamp in nanoseconds of when the smart contract created the action."
     type: Timestamp
-    notes: "Cannot be changed by issuer, operator. Smart contract controls."
+    notes: "Cannot be changed by the administration, operator. Smart contract controls."
