--- a/src/protocol/develop/types/AssetReceiver.yaml
+++ b/src/protocol/develop/types/AssetReceiver.yaml
@@ -41,3 +41,13 @@ fields:
       field: OracleSigAlgorithm
       values:
         - 1
+
+  - name: OracleSigBlockHeight
+    label: Oracle Signature Block height
+    description: The block height of the block hash used in the oracle signature.
+    type: uint
+    size: 4
+    include_if_int:
+      field: OracleSigAlgorithm
+      values:
+        - 1
