--- a/src/protocol/develop/types/AssetReceiver.yaml
+++ b/src/protocol/develop/types/AssetReceiver.yaml
@@ -30,6 +30,16 @@ fields:
       - 0
       - 1
 
+  - name: OracleIndex
+    label: Oracle Index
+    description: Specifies the index into the list of oracles in the contract offer that was used to authorize this transfer.
+    type: uint
+    size: 1
+    include_if_int:
+      field: OracleSigAlgorithm
+      values:
+        - 1
+
   - name: OracleConfirmationSig
     label: Oracle Confirmation Signature
     description: "Length 0-255 bytes. If restricted to a oracle (whitelist) or has transfer restrictions (age, location, investor status): ECDSA+secp256k1 (or the like) signed message provided by an approved/trusted oracle through an API signature of the defined message. If no transfer restrictions(trade restriction/age restriction fields in the Asset Type payload. or restricted to a whitelist by the Contract Auth Flags, it is a NULL field."
