Add double spend rejection code.

--- a/src/resources/develop/Rejections.yaml
+++ b/src/resources/develop/Rejections.yaml
@@ -31,6 +31,11 @@ values:
     label: Contract Moved
     description: The contract has been moved to a different address. Please find the addres change message and send requests to new address.
 
+  - code: 5
+    name: DoubleSpend
+    label: Double Spend
+    description: A double spend attempt has been detected.
+
 #################################### Contract ####################################
 
   - code: 10
