--- a/src/protocol/develop/actions/C1 - Contract Offer.yaml
+++ b/src/protocol/develop/actions/C1 - Contract Offer.yaml
@@ -19,8 +19,12 @@ rules:
       comments: "The smart contract sets the administration's public address with whatever public address is in Index 0 of the first valid Contract Offer.  From then on, the SC will only respond to 'commands' (request actions) from this address with respect to actions that are controlled by the administration according to the protocol."
 
     - name: ContractOperator
-      label: "Contract Operator's Public Address (Optional). Can also be used as a cold storage backup for the administration.  This is important if the administration wants to be able to change their address as changes to the administration or operator pkh in an amendment require signatures from both the administration and the operator pkhs."
-      comments: "The one exception to the rule above.  The Contract Operator can nominate a secondary controlling public address that can act on behalf of the administration for administration related requests. Typically this will be the Smart Contract Operator. (Optional)"
+      label: "Contract Operator's Public Address (Optional)"
+      comments: >
+        Can also be used as a cold storage backup for the issuer.
+        This is important if the issuer wants to be able to change their address as changes to the issuer or operator pkh in an amendment require signatures from both the issuer and the operator pkhs.
+        The one exception to this rule, the Contract Operator can nominate a secondary controlling public address that can act on behalf of the issuer for issuer related requests.
+        Typically this will be the Smart Contract Operator.
 
   outputs:
     - name: Contract
