--- a/src/protocol/develop/actions/C4 - Static Contract Formation.yaml
+++ b/src/protocol/develop/actions/C4 - Static Contract Formation.yaml
@@ -66,23 +66,10 @@ fields:
     example: "Non-Disclosure Agreement"
     notes: ""
 
-  - name: SupportingDocsFileType
-    label: Supporting Documentation File Type
-    description: "1 - 7z"
-    type: uint
-    size: 1
-    example_hex: 01
-    example: "1"
-    notes: "The file type of the supporting documents ('attached') that are important to the contract."
-    int_values:
-      - 1
-
   - name: SupportingDocs
     label: Supporting Documentation
-    description: ""
-    type: varchar
-    size: 32
-    notes: "File of all supporting documents that are important to the contract."
+    description: "Supporting documents that are important to the contract."
+    type: Document[]
 
   - name: ContractRevision
     label: Contract Revision
