Update SHC - Common Share.yaml

--- a/src/assets/develop/SHC - Common Share.yaml
+++ b/src/assets/develop/SHC - Common Share.yaml
@@ -9,7 +9,7 @@ metadata:
   label: Share - Common
   kind: Security
   category: Equity Security
-  description: Common stock represents ownership interests in corporations.
+  description: Common stock represents ownership interests in companies.
   examples:
     - Tesla Shareholders Agreement
     - Bitmain Shareholder Agreement
