--- a/src/messages/develop/0003 - Private Message.yaml
+++ b/src/messages/develop/0003 - Private Message.yaml
@@ -24,11 +24,24 @@ fields:
     type: Timestamp
     notes: ""
 
+  - name: Subject
+    label: Subject
+    description: The subject / topic of the message.
+    type: varchar
+    size: 16
+
+  - name: Regarding
+    label: Regarding
+    description: The output of the message that this message is regarding (responding to).
+    type: Output
+
   - name: PrivateMessage
     label: Private Message
     description: "Tokenized Ltd announces product launch."
-    type: varbin
-    size: 32
-    example: ""
-    notes: ""
+    type: Document
 
+  - name: Attachments
+    label: Attachments
+    description: Documents attached to the message.
+    type: Document[]
+    size: 32
